Watermark bugs fixed, outline bug fixed, like section gap added

--- a/styles/style.css
+++ b/styles/style.css
@@ -222,6 +222,7 @@ button:hover:before {
   background: currentColor;
   transform: scaleX(0);
   transition: transform 0.3s ease;
+  transform-origin: 0 0;
 }
 
 .theme-menu__button:focus {
@@ -234,7 +235,6 @@ button:hover:before {
 
 .theme-menu__button:focus-visible::after {
   transform: scaleX(0.9);
-  transform-origin: 0 0;
 }
 
 .theme-menu__button:hover {
@@ -275,7 +275,7 @@ button:hover:before {
 }
 
 .card__article {
-  outline: 2px solid var(--accent-color);
+  border: 2px solid var(--accent-color);
 }
 
 .card__header {
@@ -283,8 +283,7 @@ button:hover:before {
   font-size: 18px;
   line-height: 1.21;
   font-variation-settings: "wght" var(--main-font-headers-weight);
-  padding: 7px 12px;
-  margin-block-end: -1px;
+  padding: 6px 12px;
 }
 
 .card__image-section {
@@ -323,6 +322,13 @@ button:hover:before {
   }
 }
 
+@media (width <= 375px) {
+  .card__watermark {
+    top: 24px;
+    right: 11px;
+  }
+}
+
 .card__watermark-lowercase {
   text-transform: lowercase;
 }
@@ -344,7 +350,7 @@ button:hover:before {
 .card__like-section {
   display: flex;
   justify-content: flex-end;
-  gap: 2px;
+  gap: 8px;
   margin-block-end: 7px;
 }
 
